// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Row Controlled Button Only 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    onClick={[Function]}
  >
    toggle drawer
  </button>
  <button
    aria-controls="psds-drawer-detail-5"
    aria-expanded={false}
    className="psds-drawer__summary psds-theme--dark"
    id="psds-drawer-summary-4"
    onClick={[Function]}
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Clicking me won't toggle drawer
    </p>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Collapsed
      </div>
    </div>
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="psds-drawer-summary-4"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-5"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Row Controlled External State 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    onClick={[Function]}
  >
    open
  </button>
  <button
    onClick={[Function]}
  >
    close
  </button>
  <button
    aria-controls="psds-drawer-detail-7"
    aria-expanded={false}
    className="psds-drawer__summary psds-theme--dark"
    id="psds-drawer-summary-6"
    onClick={[Function]}
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Collapsed
      </div>
    </div>
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="psds-drawer-summary-6"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-7"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Row Controlled Start Open 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    aria-controls="psds-drawer-detail-3"
    aria-expanded={true}
    className="psds-drawer__summary psds-drawer--is-open psds-theme--dark"
    id="psds-drawer-summary-2"
    onClick={[Function]}
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark psds-drawer--is-open"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Expanded
      </div>
    </div>
  </button>
  <div
    aria-hidden={false}
    aria-labelledby="psds-drawer-summary-2"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-3"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Row Default 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    aria-controls="psds-drawer-detail-1"
    aria-expanded={false}
    className="psds-drawer__summary psds-theme--dark"
    id="psds-drawer-summary-0"
    onClick={[Function]}
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      Click me to open
    </p>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Collapsed
      </div>
    </div>
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="psds-drawer-summary-0"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-1"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      This year’s spring releases of Safari 13.1 for macOS Catalina, iPadOS, iOS, and watchOS bring a tremendous number of WebKit improvements for the web across Apple’s platforms. All of this with many more updates for improved privacy, performance, and a host of new tools for web developers. Here’s a quick look at the new WebKit enhancements available with these releases. Pointer and Mouse Events on iPadOS The latest iPadOS 13.4 brings desktop-class pointer and mouse event support to Safari and WebKit. To ensure the best experience, web developers can use feature detection and adopt Pointer Events. Since a mouse or trackpad won’t send touch events, web content should not depend on touch events. Pointer Events will specify whether a mouse/trackpad or touch generated the event. Web Animations API These releases ship with support for the Web Animations API, a web standard offering developers a JavaScript API to create, query, and control animations, including direct control of CSS Animations and CSS Transitions. It offers a convenient unified model for programmatic animations, CSS Animations and Transitions. They can all now be directly controlled to pause, resume, seek, or change speed and direction, with less manual calculation. In addition, Web Inspector has been updated to show entries for them in the Media and Animations timeline.
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Row Stack Of Drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <button
      aria-controls="psds-drawer-detail-11"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-10"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-10"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-11"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
    <button
      aria-controls="psds-drawer-detail-13"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-12"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #2
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-12"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-13"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
    <button
      aria-controls="psds-drawer-detail-15"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-14"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-14"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-15"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Stack Of Non Sibling Drawers 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <div>
    <button
      aria-controls="psds-drawer-detail-17"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-16"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #1
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-16"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-17"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
  <div>
    <button
      aria-controls="psds-drawer-detail-19"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-18"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #2
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-18"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-19"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
  <div>
    <button
      aria-controls="psds-drawer-detail-21"
      aria-expanded={false}
      className="psds-drawer__summary psds-theme--dark"
      id="psds-drawer-summary-20"
      onClick={[Function]}
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": "10px 0",
          }
        }
      >
        The Drawer #3
      </p>
      <div
        className="psds-drawer__icon-slot"
      >
        <span
          className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
        >
          <svg
            aria-label="caret down icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
            />
          </svg>
        </span>
        <div
          className="psds-screenreader-only"
        >
          Collapsed
        </div>
      </div>
    </button>
    <div
      aria-hidden={true}
      aria-labelledby="psds-drawer-summary-20"
      className="psds-drawer__details psds-theme--dark"
      id="psds-drawer-detail-21"
      role="region"
    >
      <p
        className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
        style={
          Object {
            "margin": 0,
            "padding": 20,
          }
        }
      >
        Drawer Content here
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Row Using Custom Aria Label 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    aria-controls="psds-drawer-detail-23"
    aria-expanded={false}
    aria-label="custom drawer header"
    className="psds-drawer__summary psds-theme--dark"
    id="psds-drawer-summary-22"
    onClick={[Function]}
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": "10px 0",
        }
      }
    >
      The Drawer
    </p>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Collapsed
      </div>
    </div>
  </button>
  <div
    aria-hidden={true}
    aria-label="custom drawer body"
    aria-labelledby="psds-drawer-summary-22"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-23"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;

exports[`Storyshots Components/Row With Row Component 1`] = `
<div
  style={
    Object {
      "padding": 48,
    }
  }
>
  <button
    aria-controls="psds-drawer-detail-9"
    aria-expanded={false}
    className="psds-drawer__summary psds-theme--dark"
    id="psds-drawer-summary-8"
    onClick={[Function]}
  >
    <div
      className="psds-row psds-theme--dark"
    >
      <div
        className="psds-row__overlays"
      >
        <div
          className="psds-row__image"
          style={
            Object {
              "backgroundImage": "url(https://cataas.com/cat)",
            }
          }
        />
      </div>
      <div
        className="psds-row__words"
        style={
          Object {
            "maxWidth": "calc(100% - (96px + 24px) - 0px)",
          }
        }
      >
        <div
          className="psds-row__title psds-row__title--size-medium psds-row__title psds-theme--dark"
        >
          Look at me! I'm a &lt;Row /&gt;!
        </div>
        <div
          className="psds-row__metadata psds-row__metadatapsds-theme--dark psds-row__metadata--size-medium"
        >
          <span
            className="psds-row__metadata__datum"
          >
            Kitten McCatbuns
          </span>
          <span
            aria-hidden={true}
            className="psds-row__metadata__dot"
          >
            ·
          </span>
          <span
            className="psds-row__metadata__datum"
          >
            23 hours of cuteness
          </span>
        </div>
      </div>
    </div>
    <div
      className="psds-drawer__icon-slot"
    >
      <span
        className="psds-icon psds-icon--size-medium psds-drawer__rotatable psds-theme--dark"
      >
        <svg
          aria-label="caret down icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="m12 15.41-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
          />
        </svg>
      </span>
      <div
        className="psds-screenreader-only"
      >
        Collapsed
      </div>
    </div>
  </button>
  <div
    aria-hidden={true}
    aria-labelledby="psds-drawer-summary-8"
    className="psds-drawer__details psds-theme--dark"
    id="psds-drawer-detail-9"
    role="region"
  >
    <p
      className="psds-text__p psds-text__p--size-medium psds-text__p--color-primary psds-theme--dark"
      style={
        Object {
          "margin": 0,
          "padding": 20,
        }
      }
    >
      Drawer Content here
    </p>
  </div>
</div>
`;
